@@ -358,15 +358,11 @@
 1508 2017-11-12 RestoreAssistant: ofa_exercice_treeview_set_dossier: assertion 'g_list_length(( GList * ) periods ) >= 1' failed
                 when not confirming the restoration on a newly created dossier
 
-1509 2017-11-16 VAT: duplicate form
-
 1510 2017-11-16 VAT: ofaRecordTreeview: review status column title or content
                 as "status=no" is a bit disturbing
 
 1511 2017-11-16 VAT: review the dynamic of Record status
                 may the properties be edited after operations have been generated ?
-
-1513 2017-11-16 Recurrent: have a button on ModelPage and RunPage to switch to the other one
 
 1517
 
@@ -1360,8 +1356,15 @@
                 be enabled when currently selected form is enabled
      2017-11- 6 fixed by unselecting all when running the properties
 
+1509 2017-11-16 VAT: duplicate form
+     2017-11-16 done
+
 1512 2017-11-16 VAT: have a button on FormPage and RecordPage to switch to the other one
      2017-11-16 done
+
+1513 2017-11-16 Recurrent: have a button on ModelPage and RunPage to switch to the other one
+     2017-11-16 cancelled as ModelPage already has such a switch and
+                RunPage is not suitable for that
 
 1514 2017-11-16 VAT: generating operations does not work the first time after compute
      2017-11-16 fixed
