@@ -29,6 +29,7 @@
 
    - ofaPeriodClose: save size and position of "ArchivingAccountsBalance" dialog box (todo #1516).
    - ofaTVAFormPage, ofaTVARecordPage: have a button to switch to each other (todo #1512).
+   - ofaTVAFormPage: the form is now duplicable (todo #1509).
    - ofaTVAFormProperties: improve properties update.
    - ofaTVARecordProperties: better center the label (todo #1515).
 
